# pypi-hatch-pytest-cookiecutter

./: .pre-commit-config.yaml  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  RELEASE.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/: python-package.yml  python-publish.yml
{{cookiecutter.project_slug}}/.github/ISSUE_TEMPLATE/: doc_request.md  feature_request.md
{{cookiecutter.project_slug}}/.github/workflows/: docker-build.yml  docker-image.yml  docker-publish.yml  lint.yml  python-package.yml  python-publish.yml
{{cookiecutter.project_slug}}/docker/: Dockerfile
{{cookiecutter.project_slug}}/docs/: conf.py  index.rst
{{cookiecutter.project_slug}}/docs/source/: conf.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
