[build-system]
requires = ["hatchling", ]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.project_slug }}"
description = "{{ cookiecutter.project_slug }}"
keywords = ["{{ cookiecutter.project_slug }}"]
requires-python = ">=3.8"
dependencies = [
]
dynamic = ["version", ]
classifiers = [
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]

[project.optional-dependencies]
test = [
    "pytest",
]
docs = ["Sphinx", "pydata-sphinx-theme", "sphinx-click", "autodoc_pydantic"]

[[project.authors]]
name = "{{ cookiecutter.full_name.replace('\"', '\\\"') }}"
email = "{{ cookiecutter.email }}"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "{{ cookiecutter.open_source_license }}"

[project.urls]
Source = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"

[tool.check-manifest]
ignore = [".*", ]

[tool.hatch.version]
path = "{{ cookiecutter.project_slug }}/__init__.py"
